--- a/.env.example
+++ b/.env.example
@@ -60,5 +60,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GOOGLE_CAPTCHA_SITE_KEY=
 GOOGLE_CAPTCHA_SECRET_KEY=
 
+GOOGLE_CAPTCHA_SITE_TEST_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+GOOGLE_CAPTCHA_SECRET_TEST_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
