Add laravel.yml CI githubaction file, add .env.ci file

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
             "Tests\\": "tests/"
         },
         "files": [
-            "Tests\\Utility\\function.php"
+            "tests\\Utility\\function.php"
         ]
     },
     "scripts": {
