--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,8 +21,8 @@ jobs:
     mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: test
+          MYSQL_ROOT_PASSWORD:
+          MYSQL_DATABASE: forum-council-test
         ports:
           - 33306:3306
         options: --health-cmd="mysqladmin ping" --health-interv
