--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,10 +18,10 @@ jobs:
         ports:
          - 6379:6379
         options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    mysql:
+     mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD:
+          MYSQL_ROOT_PASSWORD: test
           MYSQL_DATABASE: forum-council-test
         ports:
           - 33306:3306
