--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,8 +24,8 @@ jobs:
           MYSQL_ROOT_PASSWORD: test
           MYSQL_DATABASE: forum-council-test
         ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interv
+          - 33306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: actions/checkout@v1
